# robot

./: .gitignore  Dockerfile.add_apriltags  MISSION_SYSTEM.md  start.bat  start_container.bat
ros2_ws/: check_robot_camera.sh  generate_apriltags.py  start_courier_robot.sh  start_courier_robot_new.sh  test_gazebo_manual.sh  test_system.sh
ros2_ws/src/courier_bfs_planner/: bfs_planner_node.py  package.xml  setup.cfg  setup.py
ros2_ws/src/courier_bfs_planner/courier_bfs_planner/: bfs_node.py
ros2_ws/src/courier_bt/: courier_bt_node.py  package.xml  setup.cfg  setup.py
ros2_ws/src/courier_bt/courier_bt/: courier_bt_node.py
ros2_ws/src/courier_navigation/: CMakeLists.txt  bringup.launch.py  package.xml
ros2_ws/src/courier_navigation/launch/: nav2_bringup_launch.py
ros2_ws/src/courier_robot_description/: CMakeLists.txt  package.xml
ros2_ws/src/courier_robot_description/models/courier_robot/: model.config  model.sdf
ros2_ws/src/courier_robot_description/urdf/: courier_robot.sdf  courier_robot.urdf.xacro
ros2_ws/src/courier_tag_localization/: package.xml  setup.cfg  setup.py
ros2_ws/src/courier_tag_localization/courier_tag_localization/: tag_localization_node.py
ros2_ws/src/courier_world/: CMakeLists.txt  package.xml
ros2_ws/src/courier_world/launch/: world.launch.py
ros2_ws/src/courier_world/models/apriltag/: model.sdf
ros2_ws/src/courier_world/models/apriltag_0/: model.config  model.sdf
ros2_ws/src/courier_world/models/apriltag_1/: model.config  model.sdf
ros2_ws/src/courier_world/models/goal_cell/: model.sdf
ros2_ws/src/courier_world/models/obstacle_box/: model.sdf
ros2_ws/src/courier_world/models/start_cell/: model.sdf
ros2_ws/src/courier_world/scripts/: spawn_random_obstacles.py
ros2_ws/src/courier_world/worlds/: grid_world.sdf
