<?xml version="1.0"?>
<package format="3">
  <name>courier_navigation</name>
  <version>0.0.1</version>
  <description>Navigation stack launch files for Courier Robot</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>rclpy</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
