<?xml version="1.0"?>
<package format="3">
  <name>courier_robot_description</name>
  <version>0.0.1</version>
  <description>URDF description of Courier Robot</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
</package>
