<?xml version="1.0"?>
<package format="3">
  <name>courier_tag_localization</name>
  <version>0.0.1</version>
  <description>AprilTag localization for Courier Robot</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
</package>
